@@ -1,3 +1,9 @@
+Tue Oct 16 01:55:08 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>
+
+	* module/sul.s(sul_exec): finetune previous change by canonicalising
+	given exec parameter using Run$Path and verifying if result is an
+	existing file.  If not, fall back on original given parameter.
+
 Sat Oct  6 22:24:36 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>
 
 	Due to the large number of files where following changes were made, we
